# explann

./: .gitignore  .readthedocs.yaml  README.md  README.rst  environment.yaml  pyproject.toml  requirements.txt  setup.py
data/: .~lock.ANOVA - EXERCÍCIOS.xlsx#  .~lock.ANOVA 1 FATOR - EXEMPLO.xlsx#  .~lock.ANÃ LISE_REGRESSÃ O_1_FATOR.xlsx#  .~lock.DADOS DOE 1.xlsx#  .~lock.RESPOSTAS EXERCÍCIOS PLAN. EXP.xls#  .~lock.paper_data.xlsx#  .~lock.paper_data_24.xlsx#  .~lock.regressÃ£o_mÃºltipla.xlsx#  ANOVA - EXERCÍCIOS.xlsx  ANOVA 1 FATOR - EXEMPLO.xlsx  ANÃ LISE_REGRESSÃ O_1_FATOR.xlsx  DADOS DOE 1.xlsx  RESPOSTAS EXERCÍCIOS PLAN. EXP.xls  ccd.xlsx  doe_nozzle.xlsx  explann_tutorial.rst  f2b3.xlsx  f2b4.xlsx  paper_data.xlsx  paper_data_24.xlsx  regressÃ£o_mÃºltipla.xlsx
data/experimental_planning_T0in_limit_clear/: read_results.ipynb
data/images/: incremental_design.ipe  nozzle_cp.ipe
data/lhs/: doe_more_design_variables.txt
docs/: .readthedocs.yaml  conf.py  explann.dataio.rst  explann.models.rst  explann.plot.rst  explann.rst  explann.utils.rst  index.rst  modules.rst  notebooks.rst  tutorial.rst
docs/notebooks/: Experimental_Planning_Case_Study.ipynb  Experimental_Planning_Case_Study.slides.html  Experimental_Planning_Proposal_Study.ipynb  Experimental_Planning_Proposal_Study.slides.html  doe.xlsx  experimental_planning.ipynb  (+7 more)
explann/: _pydoe.py  dataio.py  doe.py  models.py  plot.py
notebooks/: lecture_050623.ipynb  lecture_2.ipynb  paper.ipynb  paper_using_explann.ipynb  remote_lecture.ipynb  sample_doe_book.ipynb
requirements/: develop.txt  main.txt
(+393 files in other folders)
