[build-system]
requires = [
    "setuptools",
    "wheel",
]
build-backend = "setuptools.build_meta"

[project]
name = "explann"
version = "0.0.1"
description = "My wonderful Python package"
readme = "README.md"
requires-python = ">=3.8"
license = {text = "BDS 3-Clause License"}
authors = [
    {name = "Allan Moreira de Carvalho", email = "properallan@gmail.com"},
]
#urls = { source = "https://github.com/properallan/explann", documentation = "my_project.readthedocs.io/en/latest" }

urls = { source = "github.com/properallan/explann" }

dependencies = [
    "matplotlib==3.7.2",
    "numpy==1.24.3",
    "pandas==2.0.2",
    "patsy==0.5.3",
    "scipy==1.11.1",
    "seaborn==0.12.2",
    "statsmodels==0.14.0",
]

[tool.setuptools]
packages = ["explann"]
